Commit before trying something stupid

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,15 @@
     <div>
       <%= flash["notice"] %>
     </div>
-    <div>
-      <a href="/">Home</a>
-      <a href="/logout">Logout</a>
-      <a href="/login">Login</a>
-      <a href="/users/new">Signup</a>
-    </div>
+    <p>
+  <% if @current_user %>
+    <a href="/logout">Logout</a>
+    Logged in as: <%= @current_user["username"] %>
+  <% else %>
+    <a href="/users/new">Signup</a>
+  <% end %>
+</p>
+
 
     <%= yield %>
   </body>
