--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,3 +1,5 @@
+
+<% if @current_user %>
 <h1><%= @place["name"] %></h1>
 
 <h2>My Posts</h2>
@@ -10,6 +12,8 @@
 <p>
   <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
 </p>
+
+<% end %>
 
 <p>
   <a href="/places">Back to All Places</a>
