Users can only see their places and their posts.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     Logged in as: <%= @current_user["username"] %>
   <% else %>
     <a href="/users/new">Signup</a>
+    <a href="/login">Login</a>
   <% end %>
 </p>
 
