--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,21 +1,25 @@
-
-<% if @current_user %>
-<h1><%= @place["name"] %></h1>
-
+<div class="row">
+<div class="col-sm-9">
+      <% if @current_user %>
+      <h1><%= @place["name"] %></h1>      
+</div>
+<div class="col-sm-3 text-end">
+  <a href="/posts/new?place_id=<%= @place["id"] %>" class="btn btn-success">New Post</a>
+</div>
+</div>
 
 <h2>My Posts</h2>
-<% for post in @posts %>
-  <h3><%= post["title"] %></h3>
-  <h4><%= post["posted_on"] %></h4>
-  <p><%= post["description"] %></p>
+
+<div class="row">
+  <% for post in @posts %>
+    <div class="col-md-3 col-sm-6">
+      <h4><%= post["title"] %></h4>
+      <p><%= post["posted_on"] %></p>
+      <img src="<%= post["url"] %>" class="img-fluid">
+      <p><%= post["description"] %></p>
+    </div>
+  <% end %>
+</div>
+
 <% end %>
 
-<p>
-  <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
-</p>
-
-<% end %>
-
-<p>
-  <a href="/places">Back to All Places</a>
-</p>
