Got photos to show up

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,8 +19,8 @@
     </div>
 
     <div class="mb-3">
-      <%= form.label "url", class: "form-label" %>
-      <%= form.text_field "url", class: "form-control" %>
+      <%= form.label "image", class: "form-label" %>
+      <%= form.text_field "image", class: "form-control" %>
     </div>
 
     <%= form.submit "Create Post", class: "btn btn-primary" %>
