--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,14 +1,20 @@
-    <div class="row">
-      <div class="col-sm-9">
-        <h1>Places</h1>
-      </div>
-      <div class="col-sm-12">
-        <a href="/places/new/" class="btn btn-success">New Place</a>
-      </div>
-    </div>
+<div class="row">
+  <div class="col-sm-9">
+    <h1>Places</h1>
+  </div>
+  <div class="col-sm-12 my-3">
+    <a href="/places/new/" class="btn btn-success">New Place</a>
+  </div>
+</div>
 
+<div class="row">
+  <div class="col-sm-9">
 <ul>
   <% for place in @places %>
+  <div class = "mt-2">
     <li><a href="/places/<%= place["id"] %>"><%= place["name"] %></a></li>
+  </div>
   <% end %>
 </ul>
+  </div>
+</div>
