--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 </div>
 
-<% @posts = Post.where({ "user_id" => @current_user["id"] }) %>
+<% @posts = Post.where({ "user_id" => @current_user["id"], "place_id" => @place["id"] }) %>
 
 <h2>My Posts</h2>
 
@@ -17,7 +17,7 @@
     <div class="col-md-3 col-sm-6">
       <h4><%= post["title"] %></h4>
       <p><%= post["posted_on"] %></p>
-      <img src="<%= post["url"] %>" class="img-fluid">
+      <img src="<%= post["image"] %>" class="img-fluid">
       <p><%= post["description"] %></p>
     </div>
     <% end %>
